--- a/TP1_Ejercicio_2/.project
+++ b/TP1_Ejercicio_2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP1_repaso_1_ejercicio_repaso</name>
+	<name>TP1_Ejercicio_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1647820918358</id>
+			<id>1648075800710</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
