--- a/TPROG1_TP1_Ejercicio_1/.project
+++ b/TPROG1_TP1_Ejercicio_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP1_Ejercicio_2</name>
+	<name>TPROG1_TP1_Ejercicio_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1648075800710</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
