--- a/TPROG1_TP1_Ejercicio_1_Repaso/.project
+++ b/TPROG1_TP1_Ejercicio_1_Repaso/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP1_Ejercicio_1_Repaso</name>
+	<name>TPROG1_TP1_Ejercicio_1_Repaso</name>
 	<comment></comment>
 	<projects>
 	</projects>
